force-app/main/default/objects/Contact/fields/Abnormal_Semen_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Abnormal_Semen_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abnormal Semen Analysis?</label>
    <type>Checkbox</type>
</CustomField>