force-app/main/default/objects/Contact/fields/Allergic_to_What__c.field-meta.xml
<CustomField>
    <fullName>Allergic_to_What__c</fullName>
    <label>Allergic to What</label>
    <type>TextArea</type>
</CustomField>