force-app/main/default/objects/Contact/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allergies</label>
    <type>Checkbox</type>
</CustomField>