force-app/main/default/objects/Contact/fields/Antral_Folical_Count__c.field-meta.xml
<CustomField>
    <fullName>Antral_Folical_Count__c</fullName>
    <label>Antral Follicle Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>