force-app/main/default/objects/Contact/fields/Attempted_in_prev_relationships__c.field-meta.xml
<CustomField>
    <fullName>Attempted_in_prev_relationships__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attempted in prev. relationships?</label>
    <type>Checkbox</type>
</CustomField>