force-app/main/default/objects/Contact/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>IF(
  LEN(TEXT(DAY(Birthdate))) = 1,
  &apos;0&apos; &amp; TEXT(DAY(Birthdate)),
  TEXT(DAY(Birthdate))
) 
&amp; &quot;/&quot; &amp;
IF(
  LEN(TEXT(MONTH(Birthdate))) = 1,
  &apos;0&apos; &amp; TEXT(MONTH(Birthdate)),
  TEXT(MONTH(Birthdate))
) 
&amp; &quot;/&quot; &amp;
TEXT(YEAR(Birthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Text</type>
</CustomField>