force-app/main/default/objects/Contact/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <formula>Weight_kg__c /(( Height__c /100)*( Height__c /100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>