force-app/main/default/objects/Contact/fields/BMI_Check__c.field-meta.xml
<CustomField>
    <fullName>BMI_Check__c</fullName>
    <formula>BMI__c &gt;34</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BMI Check</label>
    <type>Checkbox</type>
</CustomField>