force-app/main/default/objects/Contact/fields/Cancer__c.field-meta.xml
<CustomField>
    <fullName>Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History of Cancer</label>
    <type>Checkbox</type>
</CustomField>