force-app/main/default/objects/Contact/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <description>Details the Contact&apos;s Children with names and age</description>
    <label>Children</label>
    <length>200</length>
    <type>Text</type>
</CustomField>