force-app/main/default/objects/Contact/fields/Compass_Consent__c.field-meta.xml
<CustomField>
    <fullName>Compass_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compass Consent</label>
    <referenceTo>Consent_Compass__c</referenceTo>
    <relationshipLabel>Patients &amp; Donors</relationshipLabel>
    <relationshipName>Patients_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>