force-app/main/default/objects/Contact/fields/Compass_Household_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Compass_Household_Doctor__c</fullName>
    <formula>Account.Doctor2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Household Doctor</label>
    <type>Text</type>
</CustomField>