force-app/main/default/objects/Contact/fields/Count_of_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Cycles__c</fullName>
    <label>Total Count of Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>