force-app/main/default/objects/Contact/fields/Count_Semen_Samples__c.field-meta.xml
<CustomField>
    <fullName>Count_Semen_Samples__c</fullName>
    <label>Count Available Semen Samples</label>
    <summarizedField>Sperm_Sample__c.Number_of_Straws_Remaining__c</summarizedField>
    <summaryFilterItems>
        <field>Sperm_Sample__c.Consumed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Sperm_Sample__c.Donor_Owner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>