force-app/main/default/objects/Contact/fields/Current_Medicare_Card__c.field-meta.xml
<CustomField>
    <fullName>Current_Medicare_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Medicare Card?</label>
    <type>Checkbox</type>
</CustomField>