force-app/main/default/objects/Contact/fields/Cycles_in_Last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Cycles_in_Last_12_months__c</fullName>
    <label>Cycles in Last 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>