force-app/main/default/objects/Contact/fields/Cycling_for_Fertility_Preservation__c.field-meta.xml
<CustomField>
    <fullName>Cycling_for_Fertility_Preservation__c</fullName>
    <label>Cycling for Fertility Preservation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>