force-app/main/default/objects/Contact/fields/DAN__c.field-meta.xml
<CustomField>
    <fullName>DAN__c</fullName>
    <label>DAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>