force-app/main/default/objects/Contact/fields/Date_Diagnosed__c.field-meta.xml
<CustomField>
    <fullName>Date_Diagnosed__c</fullName>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>