force-app/main/default/objects/Contact/fields/Date_of_Vasectomy__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Vasectomy__c</fullName>
    <label>Date of Vasectomy</label>
    <type>Date</type>
</CustomField>