force-app/main/default/objects/Contact/fields/Date_Started_Trying_to_Conceive__c.field-meta.xml
<CustomField>
    <fullName>Date_Started_Trying_to_Conceive__c</fullName>
    <label>Date Started Trying to Conceive</label>
    <type>Date</type>
</CustomField>