force-app/main/default/objects/Contact/fields/Doctors_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Date_Field__c</fullName>
    <formula>Account.Doctor2__r.Compass_Doctor_Dates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctors Date Field</label>
    <type>Date</type>
</CustomField>