force-app/main/default/objects/Contact/fields/Donor_Bank__c.field-meta.xml
<CustomField>
    <fullName>Donor_Bank__c</fullName>
    <label>Donor Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSB</fullName>
            </value>
            <value>
                <fullName>XYT</fullName>
            </value>
            <value>
                <fullName>CEB</fullName>
            </value>
            <value>
                <fullName>FFX</fullName>
            </value>
            <value>
                <fullName>IVMED</fullName>
            </value>
            <value>
                <fullName>CALC</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>TWESB</fullName>
            </value>
            <value>
                <fullName>ESB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>