force-app/main/default/objects/Contact/fields/Donor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_First_Name__c</fullName>
    <label>Donor First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>