force-app/main/default/objects/Contact/fields/Donor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Last_Name__c</fullName>
    <label>Donor Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>