force-app/main/default/objects/Contact/fields/DonorHousehold1__c.field-meta.xml
<CustomField>
    <fullName>DonorHousehold1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Household 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patients &amp; Donors</relationshipLabel>
    <relationshipName>Patients_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>