force-app/main/default/objects/Contact/fields/Either_Ovary_Removed__c.field-meta.xml
<CustomField>
    <fullName>Either_Ovary_Removed__c</fullName>
    <label>Had Either Ovary Removed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Right</fullName>
            </value>
            <value>
                <fullName>Yes - Left</fullName>
            </value>
            <value>
                <fullName>Yes - Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>