force-app/main/default/objects/Contact/fields/EPID__c.field-meta.xml
<CustomField>
    <fullName>EPID__c</fullName>
    <label>EPID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>