force-app/main/default/objects/Contact/fields/Family_History_of_Genetic_Disorders__c.field-meta.xml
<CustomField>
    <fullName>Family_History_of_Genetic_Disorders__c</fullName>
    <label>Family History of Genetic Disorders?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>