force-app/main/default/objects/Contact/fields/Family_Number__c.field-meta.xml
<CustomField>
    <fullName>Family_Number__c</fullName>
    <label>Family Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>