force-app/main/default/objects/Contact/fields/Fertility_Preservation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fertility_Preservation_Reason__c</fullName>
    <label>Fertility Preservation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Reasons</fullName>
            </value>
            <value>
                <fullName>Non-Medical Reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>