force-app/main/default/objects/Contact/fields/Financial_Consent__c.field-meta.xml
<CustomField>
    <fullName>Financial_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Consent</label>
    <type>Checkbox</type>
</CustomField>