force-app/main/default/objects/Contact/fields/First_Letter_of_Sex__c.field-meta.xml
<CustomField>
    <fullName>First_Letter_of_Sex__c</fullName>
    <formula>LEFT(TEXT(Sex_at_Birth__c), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Letter of Sex</label>
    <type>Text</type>
</CustomField>