force-app/main/default/objects/Contact/fields/Gender_text_value__c.field-meta.xml
<CustomField>
    <fullName>Gender_text_value__c</fullName>
    <formula>TEXT(Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender text value</label>
    <type>Text</type>
</CustomField>