force-app/main/default/objects/Contact/fields/General_Consent__c.field-meta.xml
<CustomField>
    <fullName>General_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Consent</label>
    <type>Checkbox</type>
</CustomField>