force-app/main/default/objects/Contact/fields/GP_Check__c.field-meta.xml
<CustomField>
    <fullName>GP_Check__c</fullName>
    <formula>GP_Referer__c = NULL || GP_Referral_Expiry_Date__c &lt; today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Check</label>
    <type>Checkbox</type>
</CustomField>