force-app/main/default/objects/Contact/fields/GP_Expiry_Date_Upcoming_Check__c.field-meta.xml
<CustomField>
    <fullName>GP_Expiry_Date_Upcoming_Check__c</fullName>
    <formula>GP_Referral_Expiry_Date__c  &lt; (today() + 28)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Expiry Date Upcoming Check</label>
    <type>Checkbox</type>
</CustomField>