force-app/main/default/objects/Contact/fields/GP_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>GP_Provider_Number__c</fullName>
    <formula>GP_Referer__r.Provider_Number__c</formula>
    <label>GP Provider Number</label>
    <type>Text</type>
</CustomField>