force-app/main/default/objects/Contact/fields/GP_Referer__c.field-meta.xml
<CustomField>
    <fullName>GP_Referer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GP Referer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Doctor__c.Doctor_Type__c</field>
            <operation>equals</operation>
            <value>General Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Doctor__c.Doctor_Type__c</field>
            <operation>contains</operation>
            <value>Specialist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patients &amp; Donors</relationshipLabel>
    <relationshipName>Patients_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>