force-app/main/default/objects/Contact/fields/GP_Referral__c.field-meta.xml
<CustomField>
    <fullName>GP_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GP Referral</label>
    <type>Checkbox</type>
</CustomField>