force-app/main/default/objects/Contact/fields/GP_Referral_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>GP_Referral_Expiry_Date__c</fullName>
    <label>GP Referral Expiry Date</label>
    <type>Date</type>
</CustomField>