force-app/main/default/objects/Contact/fields/GP_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>GP_Referral_Type__c</fullName>
    <defaultValue>&apos;S&apos;</defaultValue>
    <label>GP Referral Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>