force-app/main/default/objects/Contact/fields/Height_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Height_as_Text__c</fullName>
    <label>Height</label>
    <length>3</length>
    <type>Text</type>
</CustomField>