force-app/main/default/objects/Contact/fields/Household_Dr_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Household_Dr_Provider_Number__c</fullName>
    <formula>Account.Doctor2__r.Provider_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Dr Provider Number</label>
    <type>Text</type>
</CustomField>