force-app/main/default/objects/Contact/fields/In_Progress_Cycles__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Cycles__c</fullName>
    <label>In Progress Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>