force-app/main/default/objects/Contact/fields/Including_FSH_Treatment_EPU_OPU__c.field-meta.xml
<CustomField>
    <fullName>Including_FSH_Treatment_EPU_OPU__c</fullName>
    <label>Including FSH / EPU or Intending OPU?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>