force-app/main/default/objects/Contact/fields/Infertility_Diagnosed__c.field-meta.xml
<CustomField>
    <fullName>Infertility_Diagnosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infertility Diagnosed</label>
    <type>Checkbox</type>
</CustomField>