force-app/main/default/objects/Contact/fields/Is_Infertility_Unexplained__c.field-meta.xml
<CustomField>
    <fullName>Is_Infertility_Unexplained__c</fullName>
    <label>Is Infertility Unexplained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>