force-app/main/default/objects/Contact/fields/Is_Treatment_Unrelated_to_Infertility__c.field-meta.xml
<CustomField>
    <fullName>Is_Treatment_Unrelated_to_Infertility__c</fullName>
    <label>Is Treatment Unrelated to Infertility?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Genetic Screening</fullName>
            </value>
            <value>
                <fullName>Yes – Fertility Preservation for Future Use</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>