force-app/main/default/objects/Contact/fields/Last_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_1__c</fullName>
    <label>Last Day 1</label>
    <type>Date</type>
</CustomField>