force-app/main/default/objects/Contact/fields/Length_of_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Cycle__c</fullName>
    <label>Length of Cycle</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>