force-app/main/default/objects/Contact/fields/Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Education__c</fullName>
    <label>Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year 11 or Below (includes Certificate I/I/nfd)</fullName>
            </value>
            <value>
                <fullName>Year 12</fullName>
            </value>
            <value>
                <fullName>Certificate III/IV</fullName>
            </value>
            <value>
                <fullName>Advanced Diploma and Diploma</fullName>
            </value>
            <value>
                <fullName>Bachelor Degree</fullName>
            </value>
            <value>
                <fullName>Graduate Diploma and Graduate Certificate</fullName>
            </value>
            <value>
                <fullName>Postgraduate Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>