force-app/main/default/objects/Contact/fields/Mailing_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Post_Code__c</fullName>
    <formula>MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Post Code</label>
    <type>Text</type>
</CustomField>