force-app/main/default/objects/Contact/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <label>Medicare Issue Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>