force-app/main/default/objects/Contact/fields/Medicare_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Expiry__c</fullName>
    <label>Medicare Expiry</label>
    <length>5</length>
    <type>Text</type>
</CustomField>