force-app/main/default/objects/Contact/fields/Medicare_Information__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Information__c</fullName>
    <label>Medicare Information</label>
    <type>Url</type>
</CustomField>