force-app/main/default/objects/Contact/fields/Medicare_Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Issue_Number__c</fullName>
    <formula>TEXT(Medicare__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicare Issue Number</label>
    <type>Text</type>
</CustomField>