force-app/main/default/objects/Contact/fields/Months_attempting__c.field-meta.xml
<CustomField>
    <fullName>Months_attempting__c</fullName>
    <label>Months attempting?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>