force-app/main/default/objects/Contact/fields/No_Previous_cycles_completed__c.field-meta.xml
<CustomField>
    <fullName>No_Previous_cycles_completed__c</fullName>
    <label>No. Previous cycles completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>