force-app/main/default/objects/Contact/fields/OI_Tracking_Consent__c.field-meta.xml
<CustomField>
    <fullName>OI_Tracking_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OI Tracking Consent</label>
    <type>Checkbox</type>
</CustomField>