force-app/main/default/objects/Contact/fields/Ovary_Removal__c.field-meta.xml
<CustomField>
    <fullName>Ovary_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ovary Removal</label>
    <type>Checkbox</type>
</CustomField>