force-app/main/default/objects/Contact/fields/Ovary_Removal_Side__c.field-meta.xml
<CustomField>
    <fullName>Ovary_Removal_Side__c</fullName>
    <label>Ovary Removal Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>