force-app/main/default/objects/Contact/fields/Partner_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Partner_Birthdate__c</fullName>
    <formula>TEXT(Partner__r.Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Birthdate</label>
    <type>Text</type>
</CustomField>