force-app/main/default/objects/Contact/fields/Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email__c</fullName>
    <formula>Partner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Email</label>
    <type>Text</type>
</CustomField>