force-app/main/default/objects/Contact/fields/Partner_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Partner_Mobile_Phone__c</fullName>
    <formula>Partner__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Mobile Phone</label>
    <type>Text</type>
</CustomField>