force-app/main/default/objects/Contact/fields/Partner_s_DOB__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_DOB__c</fullName>
    <formula>Partner__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner&apos;s DOB</label>
    <type>Date</type>
</CustomField>