force-app/main/default/objects/Contact/fields/Patient_First_Name_Medicare__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name_Medicare__c</fullName>
    <formula>FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient First Name Medicare</label>
    <type>Text</type>
</CustomField>