force-app/main/default/objects/Contact/fields/Patient_Has_Had_IVF_Cycle_This_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Patient_Has_Had_IVF_Cycle_This_Calendar__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Has Had IVF Cycle This Calendar</label>
    <type>Checkbox</type>
</CustomField>