force-app/main/default/objects/Contact/fields/Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Id__c</fullName>
    <displayFormat>8{00000}</displayFormat>
    <label>Patient Id</label>
    <type>AutoNumber</type>
</CustomField>