force-app/main/default/objects/Contact/fields/Patient_Last_Name_Medicare__c.field-meta.xml
<CustomField>
    <fullName>Patient_Last_Name_Medicare__c</fullName>
    <formula>LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Last Name Medicare</label>
    <type>Text</type>
</CustomField>