force-app/main/default/objects/Contact/fields/PCOS_Diagnosed__c.field-meta.xml
<CustomField>
    <fullName>PCOS_Diagnosed__c</fullName>
    <label>PCOS Diagnosed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>